# cursey

./: .gitignore  CMakeLists.txt  \  logfile.txt  main.cpp  script.py  syntax.cpp  test.txt  test2.txt
.cache/clangd/index/: editor.cpp.4A8FA91F769170CB.idx  editor.h.695A42AECB46587F.idx  gapbuffer.h.C2CD594D8AB2D559.idx  log.cpp.E57F9430A3151FFF.idx  log.h.B7A5C6A646CB2B41.idx  main.cpp.1761349C3ED31118.idx  textbuffer.cpp.FA08BDDCD4867C27.idx  textbuffer.h.1A755BD86B58FC94.idx  tui.cpp.BE0429BE9FD6A544.idx  tui.h.4957EC1F51FE12A8.idx
src/: commands.cpp  commands.h  cursor.cpp  cursor.h  defs.h  deque_gb.cpp  deque_gb.h  editor.cpp  editor.h  gapbuffer.h  keybindings.cpp  keybindings.h  log.h  textbuffer.cpp  textbuffer.h  tui.cpp  tui.h  viewportmanager.cpp  viewportmanager.h
src/commands/: commands.cpp  commands.h
src/core/: buffer.cpp  buffer.h  cursor.cpp  cursor.h  editor.cpp  editor.h  lex.cpp  lex.h  textbuffer.cpp  textbuffer.h  tui.cpp  tui.h  viewportmanager.cpp  viewportmanager.h
src/keybindings/: keybindings.cpp  keybindings.h
src/utils/: deque_gb.cpp  deque_gb.h  log.cpp  log.h
